Monitoring APIs with Spring Boot Actuator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=restful-web-services
 
 #logging.level.org.springframework=debug
+
+#Exposing all Actuator urls
+management.endpoints.web.exposure.include=*
