--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.application.name=restful-web-services
 
 #Exposing all Actuator urls
 management.endpoints.web.exposure.include=*
+
+spring.datasource.url=jdbc:h2:mem:testDB
+spring.jpa.defer-datasource-initialization=true
+#spring.h2.console.enabled=true
+spring.jpa.show-sql=true
