--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,36 @@ spring.application.name=restful-web-services
 #Exposing all Actuator urls
 management.endpoints.web.exposure.include=*
 
-spring.datasource.url=jdbc:h2:mem:testDB
+#spring.datasource.url=jdbc:h2:mem:testDB
 spring.jpa.defer-datasource-initialization=true
 #spring.h2.console.enabled=true
 spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/social-media-database
+spring.datasource.username=mysql
+spring.datasource.password=vipul@123
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+
+#docker run --detach
+# --env MYSQL_ROOT_PASSWORD=root
+# --env MYSQL_USER=mysql
+# --env MYSQL_PASSWORD=vipul@123
+# --env MYSQL_DATABASE=social-media-database
+# --name mysql
+# --publish 3306:3306
+# mysql:8-oracle
+
+
+#mysqlsh commands :-
+#
+#mysqlsh
+#\connect mysql@localhost:3306
+#\sql
+#use social-media-database
+#select * from user_details;
+#select * from post;
+#\quit
